--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         <button id="MyLocation" class="button-fetch" onclick="MyLocalWeather()">Get Local Weather</button>
     </div>
     <div id="weather-container"></div>
+    <div id="map"></div>
+
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2DnmRmlSTHiZYCgy8upa-tzqP6clgJt0&callback=initMap">
+    </script>
 </body>
 </html>
